hoja de estilo compartida

--- a/LAB01/30291267/perfil.html
+++ b/LAB01/30291267/perfil.html
@@ -5,78 +5,7 @@
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&family=Montserrat:wght@300;400;500&family=Poppins:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-		.contenedor {
-			display: flex;
-			gap: 10px;
-			justify-content: center;
-		}
-
-		.imagen-perfil {
-			flex: 0 0 auto;
-		}
-
-		.info-perfil {
-			flex: 1;
-			border: 1.5px solid #000000;
-			padding: 2px;
-			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-		}
-
-		.imagen {
-			width: 200px;
-			object-fit: cover;
-			border-radius: 40px 0 0 0;
-		}
-
-		h1 {
-			color: #F28705; 
-			margin-left: 5px;
-			margin-top: 15px;
-		}
-
-		.parrafo-perfil {
-			margin-left: 5px;
-			margin-top: 5px;
-		}
-
-		.parrafo-perfil-descripcion {
-			font-family: 'Inter', sans-serif;
-			font-style: italic;
-		}
-		
-		.tabla-perfil {
-			margin-left: 8px;
-		}
-
-		.tabla-perfil td{
-			padding-right: 10px;
-		}
-
-		.tabla-perfil-negrita {
-			font-weight: bold;
-		}
-
-		.mail-perfil {
-			margin-left: 5px;
-		}
-
-		a {
-			color: orange;
-			text-decoration: none;
-			transition: all 0.3s ease;
-		}
-
-		a:hover {
-			color:red;
-			transform: translateY(-2px);
-		}
-
-		a:active {
-			color:red;		
-		}
-
-	</style>
+	<link rel="stylesheet" href="/ATI/LAB01/css/style.css">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<title>Brhandon Palomo</title>
 </head>
