--- a/LAB01/index.html
+++ b/LAB01/index.html
@@ -4,164 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="30291267/favicon.ico">
-    <style>
-
-        body {
-            margin: 0;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        header {
-            /* margin: 0; */
-            background-color: #FFB8AD;
-            color:white;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            /* padding: 20px; */
-            height: 60px;
-            box-sizing: border-box;
-        }
-
-        main {
-            flex: 1;
-        }
-
-        nav {
-            width: 100%;
-            height: 100%;
-        }
-
-        .cabecera-opciones {
-            display: flex;
-            gap: 30px;
-            align-items: stretch;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            width: 98%;
-            height: 100%;
-        }
-
-        .cabecera-opciones li {
-            flex: 1;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .cabecera-opciones-titulo, .cabecera-opciones-saludo {
-            border-right: 1px solid white;
-        }
-
-        .cabecera-opciones-titulo {
-            font-size: 1.8rem;
-            font-weight: bold;
-        }
-
-        .ucv-text {
-            font-size: 1rem;
-        }
-
-        .cabecera-opciones-busqueda {
-            flex: 1.5; /* Que ocupe un poco más que los otros */
-        }
-
-        .busqueda {
-            padding: 5px 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 80%;
-            transition: all 0.3s ease;
-        }
-
-        .busqueda:focus {
-            border-color: #FF8A7A;
-            box-shadow: 0 0 5px rgba(255, 138, 122, 0.5);
-            outline: none;
-        }
-
-        .busqueda:hover {
-            border-color: #999;
-        }
-
-        button {
-            padding: 5px 10px;
-            background: white;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-left: 5px;
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-
-        button:hover {
-            background: #f0f0f0;
-            border-color: #999;
-        }
-
-        button:active {
-            background: #e0e0e0;
-            box-shadow: inset 0 1px 3px rgba(0,0,0,0.2); /* Efecto de presión */
-}
-
-        footer {
-            background-color: #FFB8AD;
-            color: white;
-            padding: 15px; 
-            text-align: center;
-        }
-
-        footer p {
-            font-weight: bold;
-            margin: 0;
-        }
-
-        .lista-perfiles {
-            display: flex;
-            gap: 20px;
-            list-style: none;
-            flex-wrap: wrap;
-            padding: 20px;
-            justify-content: center;
-        }
-
-        .perfil {
-            background-color: #FFEEEB;
-            text-align: center;
-            padding: 15px;
-            border-radius: 10px;
-            width: 140px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Sombra sutil */
-        }
-
-        .perfil img {
-            width: 120px;       
-            height: 165px;      
-            object-fit: cover;  
-            border-radius: 10px; 
-            display: block;
-            margin: 0 auto 10px auto; 
-        }
-
-        .perfil-nombre {
-            margin: 0;
-            color: #333; /* Un poco más oscuro para mejor lectura */
-            font-weight: bold;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="css/style.css">
     <title>ATI[UCV] 2025-2</title>
 </head>
-<body>
+<body class="body-perfil">
     <header>
         <nav>
             <ul class="cabecera-opciones">
