mis datos de perfil

--- a/30291267/perfil.html
+++ b/30291267/perfil.html
@@ -16,42 +16,37 @@
 			<img src="30291267.jpg" alt="" class="imagen">
 		</div>
 		<div class="info-perfil">
-			<h1>Brhandon Palomo</h1>
+			<h1></h1>
 			<div class="parrafo-perfil">
-				<p class="parrafo-perfil-descripcion">Estudiante de Computación
-					desarrollando sus habilidades en los
-					laboratorios de ATI. Con interés en aplicar
-					los fundamentos de las tecnologías web modernas para crear
-					soluciones interactivas y funcionales, consolidando el
-					conocimiento teórico a través de la práctica.</p>
+				<p class="parrafo-perfil-descripcion"></p>
 			</div>
 			<div class="tabla-perfil">
 				<table>
 					<tr>
 						<td>Mi color favorito es:</td>
-						<td>Azul</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>Mi libro favorito es:</td>
-						<td>La llamada de Cthulhu</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>Mi estilo de música preferida es:</td>
-						<td>Cualquiera menos reggaeton</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>Mis Videojuegos favoritos son:</td>
-						<td>Terraria</td>
+						<td></td>
 					</tr>
 					<tr class="tabla-perfil-negrita">
 						<td>Lenguajes aprendidos:</td>
-						<td>c++, java, python</td>
+						<td></td>
 					</tr>
 				</table>
 			</div>
 			<div class="mail-perfil">
 				<p>Si necesitan comunicarse conmigo me pueden escribir a:
-					<a href="mailto:brhandon28@gmail.com">brhandon28@gmail.com</a>
+					<a href="mailto:brhandon28@gmail.com"></a>
 				</p>
 			</div>
 		</div>
