listado de estudiantes dinámico usando javascript

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="30291267/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="conf/configES.json" defer></script>
+    <script type="text/javascript" src="datos/index.json" defer></script>
+    <script src="js/index.js" defer></script>
+
     <title>ATI[UCV] 2025-2</title>
 </head>
 
@@ -38,119 +42,125 @@
             <ul class="lista-perfiles">
                 <!-- Perfil 1 -->
                 <li class="perfil">
-                    <picture>
-                        <source media="(max-width: 768px)" srcset="30291267/30291267Pequeña.jpg">
-                        <img class="mi-perfil" src="30291267/30291267Grande.jpg" alt="Brhandon Palomo">
-                    </picture>
-                    <div class="perfil-nombre">Brhandon Palomo</div>
+                    <!-- <picture>
+                        <source media="(max-width: 768px)" srcset="30291267/30291267Pequeña.jpg">                        
+                    </picture> -->
+                    <img class="img-perfil mi-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 2 -->
                 <li class="perfil">
-                    <img src="dummies/dummy1/dummy.jpg" alt="">
-                    <div class="perfil-nombre">María González</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 3 -->
                 <li class="perfil">
-                    <img src="dummies/dummy2/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Ana Rodríguez</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 4 -->
                 <li class="perfil">
-                    <img src="dummies/dummy3/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Sofía López</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 5 -->
                 <li class="perfil">
-                    <img src="dummies/dummy4/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Carlos Mendoza</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 6 -->
                 <li class="perfil">
-                    <img src="dummies/dummy5/dummy.jpg" alt="">
-                    <div class="perfil-nombre">José Herrera</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 7 -->
                 <li class="perfil">
-                    <img src="dummies/dummy6/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Luis Castillo</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 8 -->
                 <li class="perfil">
-                    <img src="dummies/dummy1/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Isabella Martínez</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 9 -->
                 <li class="perfil">
-                    <img src="dummies/dummy2/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Valentina Pérez</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 10 -->
                 <li class="perfil">
-                    <img src="dummies/dummy3/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Camila García</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 11 -->
                 <li class="perfil">
-                    <img src="dummies/dummy1/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Gabriela Sánchez</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 12 -->
                 <li class="perfil">
-                    <img src="dummies/dummy2/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Daniela Ramírez</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 13 -->
                 <li class="perfil">
-                    <img src="dummies/dummy3/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Laura Fernández</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 14 -->
                 <li class="perfil">
-                    <img src="dummies/dummy4/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Miguel Rojas</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 15 -->
                 <li class="perfil">
-                    <img src="dummies/dummy5/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Alejandro Vargas</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 16 -->
                 <li class="perfil">
-                    <img src="dummies/dummy6/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Roberto Silva</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 17 -->
                 <li class="perfil">
-                    <img src="dummies/dummy1/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Elena Cruz</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 18 -->
                 <li class="perfil">
-                    <img src="dummies/dummy2/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Patricia Morales</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
                 <!-- Perfil 19 -->
                 <li class="perfil">
-                    <img src="dummies/dummy3/dummy.jpg" alt="">
-                    <div class="perfil-nombre">Adriana Reyes</div>
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
+                </li>
+                
+                <!-- Perfil 20 -->
+                <li class="perfil">
+                    <img class="img-perfil" src="" alt="">
+                    <div class="perfil-nombre"></div>
                 </li>
 
             </ul>
