perfil con información dinámica

--- a/perfil.html
+++ b/perfil.html
@@ -5,48 +5,50 @@
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&family=Montserrat:wght@300;400;500&family=Poppins:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/ATI/LAB01/css/style.css">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" type="image/x-icon" href="30291267/favicon.ico">
+	<script src="datos/index.json" defer></script>
+	<script src="js/perfil.js" defer></script>
+	<!-- <script src="js/perfil.js" defer></script> -->
 	<title>Brhandon Palomo</title>
 </head>
 
 <body>
 	<div class="contenedor">
 		<div class="imagen-perfil">
-			<img src="30291267.jpg" alt="" class="imagen">
+			<img src="" alt="" class="imagen">
 		</div>
 		<div class="info-perfil">
-			<h1></h1>
+			<h1 id="nombre-titulo"></h1>
 			<div class="parrafo-perfil">
 				<p class="parrafo-perfil-descripcion"></p>
 			</div>
 			<div class="tabla-perfil">
 				<table>
 					<tr>
-						<td>Mi color favorito es:</td>
+						<td id="color"></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>Mi libro favorito es:</td>
+						<td id="libro"></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>Mi estilo de música preferida es:</td>
+						<td id="musica"></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>Mis Videojuegos favoritos son:</td>
+						<td id="juego"></td>
 						<td></td>
 					</tr>
 					<tr class="tabla-perfil-negrita">
-						<td>Lenguajes aprendidos:</td>
+						<td id="lenguajes"></td>
 						<td></td>
 					</tr>
 				</table>
 			</div>
 			<div class="mail-perfil">
-				<p>Si necesitan comunicarse conmigo me pueden escribir a:
-					<a href="mailto:brhandon28@gmail.com"></a>
+				<p id="email"><a id="direccion-email" href=""></a>
 				</p>
 			</div>
 		</div>
