--- a/perfil.html
+++ b/perfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-ES">
 
 <head>
 	<meta charset="UTF-8">
@@ -9,8 +9,10 @@
 	<link rel="icon" type="image/x-icon" href="30291267/favicon.ico">
 	<script src="datos/index.json" defer></script>
 	<script src="js/perfil.js" defer></script>
-	<!-- <script src="js/perfil.js" defer></script> -->
-	<title>Brhandon Palomo</title>
+	<!-- <script src="conf/configEN.json" defer></script>
+	<script src="conf/configES.json" defer></script>
+	<script src="conf/configPT.json" defer></script> -->
+	<title></title>
 </head>
 
 <body>
