cambio de lenguaje según atributo

--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="30291267/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="conf/configES.json" defer></script>
+    <!-- <script type="text/javascript" src="conf/configES.json" defer></script> -->
     <script type="text/javascript" src="datos/index.json" defer></script>
     <script src="js/index.js" defer></script>
+    <!-- <script src="conf/configEN.json" defer></script>
+	<script src="conf/configES.json" defer></script>
+	<script src="conf/configPT.json" defer></script> -->
 
-    <title>ATI[UCV] 2025-2</title>
+    <title></title>
 </head>
 
 <body class="body-perfil">
     <header>
         <nav>
             <ul class="cabecera-opciones">
-                <li class="cabecera-opciones-titulo">Titulo<span class="ucv-text">[UCV]</span>2025</li>
-                <li class="cabecera-opciones-saludo" id="saludo">Hola, Usuario</li>
+                <li class="cabecera-opciones-titulo"><span class="ucv-text"></span></li>
+                <li class="cabecera-opciones-saludo" id="saludo"></li>
                 <li class="cabecera-opciones-busqueda">
                     <div class="busqueda-contenedor">
-                        <input type="text" class="busqueda" placeholder="Buscar...">
+                        <input type="text" class="busqueda" placeholder="">
                         <button class="buscar-icon">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -168,7 +171,7 @@
     </main>
 
     <footer>
-        <p class="parrafo-footer">Copyright © 2025 Escuela de computación - ATI. Todos los derechos reservados</p>
+        <p class="parrafo-footer"></p>
     </footer>
 
 </body>
