Refactorizacion de los perfiles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<script src="conf/configES.json" defer></script>
 	<script src="conf/configPT.json" defer></script> -->
 
-    <title></title>
+    <title>Perfiles ATI</title>
+    <meta name="description" content="Listado de perfiles de la clase ATI">
 </head>
 
 <body class="body-perfil">
@@ -25,7 +26,7 @@
                 <li class="cabecera-opciones-busqueda">
                     <div class="busqueda-contenedor">
                         <input type="text" class="busqueda" placeholder="">
-                        <button class="buscar-icon">
+                        <button class="buscar-icon" aria-label="Buscar perfil">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -43,129 +44,7 @@
     <main>
         <section>
             <ul class="lista-perfiles">
-                <!-- Perfil 1 -->
-                <li class="perfil">
-                    <!-- <picture>
-                        <source media="(max-width: 768px)" srcset="30291267/30291267Pequeña.jpg">                        
-                    </picture> -->
-                    <img class="img-perfil mi-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 2 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 3 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 4 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 5 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 6 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 7 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 8 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 9 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 10 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 11 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 12 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 13 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 14 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 15 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 16 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 17 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 18 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
-                <!-- Perfil 19 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-                
-                <!-- Perfil 20 -->
-                <li class="perfil">
-                    <img class="img-perfil" src="" alt="">
-                    <div class="perfil-nombre"></div>
-                </li>
-
+                <!-- Los perfiles se cargarán dinámicamente con JS -->
             </ul>
         </section>
     </main>
