--- a/perfil.html
+++ b/perfil.html
@@ -3,15 +3,14 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&family=Montserrat:wght@300;400;500&family=Poppins:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&family=Montserrat:wght@300;400;500&family=Poppins:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap"
+		rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href="30291267/favicon.ico">
 	<script src="datos/index.json" defer></script>
 	<script src="js/perfil.js" defer></script>
-	<!-- <script src="conf/configEN.json" defer></script>
-	<script src="conf/configES.json" defer></script>
-	<script src="conf/configPT.json" defer></script> -->
 	<title></title>
 </head>
 
