--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="30291267/favicon.ico">
+    <meta name="description" content="Listado de perfiles de la clase ATI">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&family=Montserrat:wght@300;400;500&family=Poppins:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <script type="text/javascript" src="conf/configES.json" defer></script> -->
     <script type="text/javascript" src="datos/index.json" defer></script>
     <script src="js/index.js" defer></script>
-    <!-- <script src="conf/configEN.json" defer></script>
-	<script src="conf/configES.json" defer></script>
-	<script src="conf/configPT.json" defer></script> -->
-
-    <title>Perfiles ATI</title>
-    <meta name="description" content="Listado de perfiles de la clase ATI">
+    <title>ATI [UCV] 2025-2</title>
 </head>
 
 <body class="body-perfil">
