--- a/perfil.html
+++ b/perfil.html
@@ -8,7 +8,7 @@
 		href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&family=Montserrat:wght@300;400;500&family=Poppins:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" type="image/x-icon" href="30291267/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<script src="datos/index.json" defer></script>
 	<script src="js/perfil.js" defer></script>
 	<title></title>
