--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="30291267/favicon.ico">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./css/style.css">
     <title>ATI[UCV] 2025-2</title>
 </head>
 <body class="body-perfil">
@@ -27,8 +27,10 @@
             <ul class="lista-perfiles">
                 <!-- Perfil 1 -->
                 <li class="perfil">
-                    <img src="30291267/30291267.jpg" alt="">
-                    <div class="perfil-nombre">Brhandon Palomo</div>
+                    <a href="30291267/perfil.html">
+                        <img src="dummies/dummy1/dummy.jpg" alt="Brhandon Palomo">
+                        <div class="perfil-nombre">Brhandon Palomo</div>
+                    </a>
                 </li>
 
                 <!-- Perfil 2 -->
